[gd_scene load_steps=4 format=3 uid="uid://yfehthjw31e"]

[ext_resource type="Script" path="res://Screens/ShopScreen/shopScreen.gd" id="1_1qk5v"]
[ext_resource type="Texture2D" uid="uid://l4ky81tb3cd8" path="res://UI/tempBoardTexture.png" id="2_oupwc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrnkx"]
size = Vector2(1494, 210)

[node name="shopScreen" type="Control" node_paths=PackedStringArray("upgradeShopButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1qk5v")
upgradeShopButton = NodePath("MarginContainer/HBoxContainer/upgradeShopButton")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(959, 540)

[node name="sellArea" type="Area2D" parent="."]
position = Vector2(959, 136)

[node name="CollisionShape2D" type="CollisionShape2D" parent="sellArea"]
shape = SubResource("RectangleShape2D_lrnkx")

[node name="buyArea" type="Area2D" parent="."]
position = Vector2(259, 1005)

[node name="CollisionShape2D" type="CollisionShape2D" parent="buyArea"]
position = Vector2(672, 0)
shape = SubResource("RectangleShape2D_lrnkx")

[node name="leaveShopButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Leave the Shop"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -141.0
offset_bottom = 54.0
grow_horizontal = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="refreshButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh
Cost: 1"

[node name="upgradeShopButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Level: 7
Cost: 21"

[node name="heroPowerControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_oupwc")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_oupwc")

[connection signal="area_entered" from="sellArea" to="." method="_on_sell_area_area_entered"]
[connection signal="area_exited" from="sellArea" to="." method="_on_sell_area_area_exited"]
[connection signal="area_entered" from="buyArea" to="." method="_on_buy_area_area_entered"]
[connection signal="area_exited" from="buyArea" to="." method="_on_buy_area_area_exited"]
[connection signal="pressed" from="leaveShopButton" to="." method="_on_leave_shop_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/refreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/upgradeShopButton" to="." method="_on_upgrade_shop_button_pressed"]
